<?xml version="1.0"?>
<package format="2">
  <name>hero_chassis_controller</name>
  <version>0.1.0</version>
  <description>A chassis controller for ROS packages.</description>
  <maintainer email="2430219374@qq.com">YAWARA</maintainer>
  <license>BSD</license>
  <author email="2430219374@qq.com">YAWARA</author>
  <!-- <author>LinKaiDong</author> -->

  <!-- buildtool_depend: dependencies of the build process -->
  <buildtool_depend>catkin</buildtool_depend>
  <!-- build_depend: dependencies only used in source files -->
  <!-- <build_depend>boost</build_depend> -->
  <!-- depend: build, export, and execution dependency -->
  <depend>eigen</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>controller_interface</depend>
  <depend>hardware_interface</depend>
  <depend>forward_command_controller</depend>
  <depend>pluginlib</depend>
  <depend>rm_description</depend>
  <depend>roslint</depend>
  <depend>control_toolbox</depend>
  <depend>geometry_msgs</depend>
  <depend>control_msgs</depend>
  <depend>realtime_tools</depend>
  <depend>tf</depend>
  <depend>nav_msgs</depend>

  <export>
    <controller_interface plugin="${prefix}/hero_chassis_controller_plugins.xml"/>
  </export>
</package>
